tests/profile/error/version/wrongtype_major_minor.profile
{
  "version": { "major": "abc", "minor": "xyz" }
}
